--- a/css/styles2.css
+++ b/css/styles2.css
@@ -171,6 +171,7 @@ h3 {
 }
 .benef-frase {
     padding-top: 20px;
+    font-size: 1.2em;
 }
 /* QUIENES SOMOS*/
 
@@ -211,7 +212,7 @@ h3 {
 }
 #cont-card-contact {
     padding-top: 10px;
-    width: 100%;
+    width: 800px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
@@ -255,12 +256,19 @@ footer a {
     font-size: 1.7em;
 }
 /* RESPONSIVE */
+@media (max-width:880px){
+    .card-beneficio {
+        width: 40%;
+        padding: 30px 0px;
+    }
+}
+
 @media (max-width: 819px){
     .html{
         font-size: 2px;
     }
     header{
-        height: 600px;
+        height: 650px;
     }
     .cont-inicio{
         flex-flow: column-reverse;
@@ -270,11 +278,8 @@ footer a {
         width: 80% ;
     }
     .cont-right{
-        width: 50% ;
-    }
-    .card-beneficio {
-        width: 40%;
-        padding: 30px 0px;
+        padding-top: 10px;
+        width: 45% ;
     }
     .card-img{
         height: 150px;
@@ -283,8 +288,11 @@ footer a {
     .cont-nosotros{
         height: 80vh;
     }
-    .cont-p-contact{
-        width: 80%;
+    #cont-card-contact{
+        width: 500px;
+    }
+    #cont-p-contact{
+        width: 70%;
     }
     .card-contact img {
         width: 50px;
@@ -297,7 +305,7 @@ footer a {
     }
 }
 
-@media (max-width: 480px)
+@media (max-width: 600px)
 {
     *{
         font-size: 14px;
@@ -314,5 +322,8 @@ footer a {
     }
     #me-link{
         font-size: 24px;
+    }
+    .benef-frase{
+        font-size: 1.5em;
     }
 }
